# mcpp_heisenberg

./: .clang-format  .gitignore  CPPLINT.cfg  Makefile  README.md  meson.build  meson_options.txt  requirements.txt
.github/workflows/: ci.yml
app/: app.cpp  app.h  main.cpp  meson.build
app/mcpp_heisenberg/: app.h
include/mcpp_heisenberg/: arma.hpp  configs.hpp  geometry.hpp  hamiltonian.hpp  logging.hpp  mc.hpp  mcpp_heisenberg.hpp
lib/: configs.cpp  geometry.cpp  hamiltonian.cpp  logging.cpp  mc.cpp  meson.build
mcpy_heisenberg/: __init__.py  get_dist_autocorr.py  get_statistics.py  get_time_autocorr.py  results.py
src/: geometry.cpp  hamiltonian.cpp  main.cpp  mc.cpp  meson.build
subprojects/: armadillo.wrap  highfive.wrap
subprojects/packagefiles/armadillo/: meson.build  meson_options.txt
subprojects/packagefiles/armadillo/include/armadillo_bits/: meson.build
subprojects/packagefiles/highfive/: meson.build
tests/: main.cpp  meson.build  tests.hpp  tests_app.cpp  tests_configs.cpp  tests_geometry.cpp  tests_hamiltonian.cpp  tests_mc.cpp
